# uav-ugv-coop-localization

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
analysis/: __init__.py  cli.py
analysis/utils/: data_loader.py  plotting.py
include/: constants.hpp  utils.hpp
include/data/: export_utils.hpp
include/filters/: ekf.hpp  estimator.hpp  ukf.hpp
include/system/: dynamics.hpp
src/: main.cpp
src/data/: export_utils.cpp
src/filters/: ekf.cpp  estimator.cpp
src/system/: dynamics.cpp
